# greg-mvp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  README_PY_SERVICE.md  README_old.md  ROADMAP.md  docker-compose.yml  plan.md  prd.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: .env  Dockerfile  __init__.py  requirements.txt
backend/app/: __init__.py  __main__.py  config.py  dependencies.py  errors.py  logging.py  logging_config.py  main.py  models.py  version.py
backend/app/core/: config.py
backend/app/domain_data/: customer_care.yml  financials.yml  reads.yml
backend/app/knowledge/: domains.yaml
backend/app/models/: __init__.py  query_models.py
backend/app/routers/: __init__.py  health.py  knowledge.py  query.py  visualization.py  viz.py
backend/app/routes/: __init__.py  bigquery.py  health.py  knowledge.py  nlp_to_sql.py  prd.py
backend/app/services/: bigquery.py  conversation_memory.py  knowledge_base.py  nl_sql_pipeline.py  nl_to_sql.py  nlp_to_sql.py  sql_executor.py  visualization_suggester.py  viz_suggester.py
backend/app/services/llm/: __init__.py
backend/app/services/llm/providers/: __init__.py  base.py
backend/app/templates/: README_PLACEHOLDER.md
backend/domain/: customer_care.yaml  financials.yaml  reads.yaml
backend/tests/: test_health.py
domain_data/: knowledge.yml
frontend/: Dockerfile  package.json  tsconfig.json
frontend/src/components/: PRDBuilder.tsx  QueryInput.tsx  ResultsTable.tsx  SQLPreview.tsx  Visualizer.tsx
frontend/src/pages/: index.tsx
frontend/src/utils/: api.ts
legacy/backend/: server.js
public/: index.html
scripts/: dev_bootstrap.sh  dev_setup.sh
tests/: conftest.py  test_health.py  test_knowledge.py  test_main.py  test_query.py  test_query_pipeline_stub.py  test_query_prepare.py  test_visualization.py  test_viz.py
