[tool.poetry]
name = "greg-mvp"
version = "0.1.0"
description = "AI Product Manager Assistant - FastAPI Backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
google-cloud-bigquery = "^3.25.0"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
plotly = "^5.22.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.5.7"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["B008"]  # Ignore FastAPI dependency injection pattern
fixable = ["ALL"]
unfixable = []

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]